custom css and fonts

--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -61,9 +61,19 @@
       </nav>
 
       <!-- content block-->
+      <div class="content container">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="blog_posts">
+              {% block content %}
+
+              {% endblock content %}
+            </div>
+          </div>
+        </div>
 
 
-
+      </div>
 
 
 
