displaying posts and comments

--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -22,7 +22,7 @@
 
 
   </head>
-  <body>
+  <body class="loader">
       
       <!-- NavBar-->
       <nav class="navbar navbar-default techfont custom-navbar">
@@ -32,7 +32,7 @@
 
             <li><a class="navbar-brand bigbrand" href="{% url 'post_list' %}">My blog</a></li>
             <li><a class="nav-link" href="{% url 'about' %}">About</a></li>
-            <li><a class="nav-link" href="https://www.github.com/kinathany">Github</a></li>
+            <li><a class="nav-link" href="https://www.github.com/jkinathan">Github</a></li>
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
