--- a/myblog/blog/templates/blog/post_form.html
+++ b/myblog/blog/templates/blog/post_form.html
@@ -1,5 +1,15 @@
 {% extends 'blog/base.html' %}
 
 {% block bodyblock %}
+<h1> New Post</h1>
 
+<form method="POST" class="post-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button class="save btn btn-secondary" type="submit" name="button">Save</button>
+</form>
+
+<script>
+var editor = new MediumEditor('.editable');
+</script>
 {% endblock %}
