post_confirm_deletes

--- a/myblog/blog/templates/blog/post_confirm_delete.html
+++ b/myblog/blog/templates/blog/post_confirm_delete.html
@@ -2,4 +2,10 @@
 
 {% block bodyblock %}
 
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure you want to delete {{ object }}?</p>
+        <input type="submit" class="btn btn-danger" value="Delete"/>
+    </form>
+
 {% endblock %}
