--- a/myblog/blog/templates/blog/comment_form.html
+++ b/myblog/blog/templates/blog/comment_form.html
@@ -2,4 +2,13 @@
 
 {% block bodyblock %}
 
+<h1> New Comment </h1>
+    <form method="POST" class="post-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-default" name="button">Post Comment</button>
+    </form>
+    <script>
+        var editor = new MediumEditor('.editable');
+    </script>
 {% endblock %}
