--- a/myblog/blog/templates/blog/post_form.html
+++ b/myblog/blog/templates/blog/post_form.html
@@ -1,14 +1,15 @@
 {% extends 'blog/base.html' %}
 
 {% block bodyblock %}
+<div class="jumbotron">
 <h1> New Post</h1>
 
 <form method="POST" class="post-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button class="save btn btn-secondary" type="submit" name="button">Save</button>
+    <button class="save btn btn-primary" type="submit" name="button">Save</button>
 </form>
-
+</div>
 <script>
 var editor = new MediumEditor('.editable');
 </script>
