--- a/myblog/blog/templates/blog/comment_form.html
+++ b/myblog/blog/templates/blog/comment_form.html
@@ -1,13 +1,14 @@
 {% extends 'blog/base.html' %}
 
 {% block bodyblock %}
-
+<div class="jumbotron">
 <h1> New Comment </h1>
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-default" name="button">Post Comment</button>
+        <button type="submit" class="btn btn-primary" name="button">Post Comment</button>
     </form>
+</div>
     <script>
         var editor = new MediumEditor('.editable');
     </script>
