--- a/myblog/blog/templates/blog/post_detail.html
+++ b/myblog/blog/templates/blog/post_detail.html
@@ -12,7 +12,7 @@
 {% else %}
     <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
 {% endif %}
-    <p class="postcontent">{{ post.title|safe|linebreaksbr }}</p>
+    <p class="postcontent">{{ post.text|safe|linebreaksbr }}</p>
 
     {% if user.is_authenticated %}
         <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary">
@@ -24,7 +24,7 @@
     {% endif %}
 
 <hr>
-<a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-primary btn-comment">Add Comment</a>
+<a href="{% url 'add_comment_post' pk=post.pk %}" class="btn btn-primary btn-comment">Add Comment</a>
 
 <div class="container">
     {% for comment in post.comments.all %}
