--- a/myblog/blog/templates/blog/post_draft_list.html
+++ b/myblog/blog/templates/blog/post_draft_list.html
@@ -1,13 +1,13 @@
 {% extends 'blog/base.html' %}
 
 {% block bodyblock %}
-
+<div class="jumbotron">
     {% for post in posts %}
         <div class="post">
-            <p class="date">Created: {{ post.created_date|date: 'd-m-Y' }}</p>
+            <p class="date">Created: {{ post.created_date|date:'d-m-Y' }}</p>
             <h1><a href="{% url 'post_detail' pk=post.pk %}"></a>{{ post.title }}</h1>
             <p>{{ post.text|truncatechars:200 }}
         </div>
     {% endfor %}
-
+</div>
 {% endblock %}
